# ocr-website

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  run.py
app/: main.py  ocr_engine.py  section_builder.py
static/css/: styles.css
static/js/: app.js
templates/: index.html
