[project]
name = "ocr-pipeline-studio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4==4.12.3",
    "flask==3.0.3",
    "flask-cors==4.0.1",
    "groq==0.11.0",
    "httpx==0.27.2",
    "lxml==5.2.2",
    "numpy==1.26.4",
    "opencv-python-headless==4.9.0.80",
    "paddleocr==2.7.3",
    "paddlepaddle==2.6.2",
    "pdf2image==1.17.0",
    "pillow==10.3.0",
    "python-dotenv==1.0.1",
    "rapidfuzz==3.9.7",
    "setuptools>=82.0.1",
    "shapely==2.0.3",
    "tqdm==4.66.4",
]
